# plasmid-verification

./: .gitattributes  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
docs/source/: conf.py  index.rst
docs/source/ddd/: plasmid_verification_context.cml  veriplas.cml  veriplas_domain.cml
src/plasmid_verification/: __init__.py  helpers.py
src/plasmid_verification/application/service/: __init__.py  plasmid_report_service.py  sample_report_service.py
src/plasmid_verification/domain/model/: __init__.py  plasmid.py  plasmid_report.py  plasmid_repository.py  plasmid_validation_specification.py  primer.py  primer_repository.py  sample.py  sample_report.py  sample_repository.py  sequence_alignment.py
src/plasmid_verification/domain/service/: __init__.py  plasmid_report_builder.py  sample_report_builder.py  sample_trimming_service.py  sequence_alignment_service.py
src/plasmid_verification/infrastructure/model/pydantic/: __init__.py  pydantic_conflict_report.py  pydantic_custom_base.py  pydantic_plasmid_report.py  pydantic_sample_report.py
src/plasmid_verification/infrastructure/service/: __init__.py  application_service_registry.py  domain_registry.py  error_probability_sample_trimming_service.py  quality_sample_trimming_service.py  smoothing_sample_trimming_service.py  zip_archive_plasmid_repository.py  zip_archive_primer_repository.py  zip_archive_sample_repository.py
src/plasmid_verification/infrastructure/service/skbio/: __init__.py  scikit_bio_sequence_alignment_service.py
tests/test_integration/: test_api.py
tests/test_unit/: test_helpers.py
