[metadata]
name = plasmid-verification
url = https://github.com/Midnighter/plasmid-verification
download_url = https://pypi.org/project/plasmid-verification/
project_urls =
    Source Code = https://github.com/Midnighter/plasmid-verification
    Documentation = https://plasmid-verification.readthedocs.io
    Bug Tracker = https://github.com/Midnighter/plasmid-verification/issues
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache-2.0
description = Semi-automated plasmid sequence verification.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =

[options]
zip_safe = True
install_requires =
    biopython
    depinfo
    pandas
python_requires = >=3.8
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox
scikit =
    scikit-bio ~=0.5.6

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/plasmid_verification/_version.py
versionfile_build = plasmid_verification/_version.py
tag_prefix =

